test/files/neg/t4417.scala




class Pixel[@specialized T] protected (var v: T)


object Pixel {
  type Pixel1d = Pixel[Double]

  def apply(v: Double): Pixel1d = new Pixel1d(v)
}





